# data-science-essay

./: README.md  pyproject.toml
database/new/: new_categories.csv  new_customer_customer_demo.csv  new_customer_demographics.csv  new_customers.csv  new_employee_territories.csv  new_employees.csv  new_order_details.csv  new_orders.csv  new_products.csv  new_region.csv  new_shippers.csv  new_suppliers.csv  new_territories.csv  new_us_states.csv
src/: app.py
src/infra/: app.py  app_test.py
src/sanitizator/: sanitizator.py  sanitizator_test.py
src/services/sanitizator/: sanitizator_test.py
