[tool.poetry]
name = "northwind"
version = "0.1.0"
description = ""
authors = ["Daniel Barreto <munizbarreto5@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
pandas = "^1.3.5"
pytest-asyncio = "^0.16.0"
asyncio = "^3.4.3"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
